<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigationFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.diploma_2020.ui.home.HomeFragment"
        android:label="@string/menu_restaurant"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_placeDetailsFragment"
            app:destination="@id/placeDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.diploma_2020.ui.monuments.MonumentsFragment"
        android:label="@string/menu_monuments"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.diploma_2020.ui.traditional.TraditionalFragment"
        android:label="@string/menu_traditional"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_traditionalDetailsFragment"
            app:destination="@id/traditionalDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/placeDetailsFragment"
        android:name="com.example.diploma_2020.ui.home.PlaceDetailsFragment"
        android:label="fragment_place_details"
        tools:layout="@layout/fragment_place_details" >
        <argument
            android:name="place"
            app:argType="com.example.diploma_2020.data.Place" />
    </fragment>
    <fragment
        android:id="@+id/navigationFragment"
        android:name="com.example.diploma_2020.ui.NavigationFragment"
        android:label="Zgjidh kategorinë"
        tools:layout="@layout/fragment_navigation" >
        <action
            android:id="@+id/action_navigationFragment_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_navigationFragment_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_navigationFragment_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_navigationFragment_to_studyBarsFragment"
            app:destination="@id/nav_bars" />
    </fragment>
    <fragment
        android:id="@+id/traditionalDetailsFragment"
        android:name="com.example.diploma_2020.ui.traditional.TraditionalDetailsFragment"
        android:label="TraditionalDetailsFragment" >
        <argument
            android:name="place"
            app:argType="com.example.diploma_2020.data.Place" />
    </fragment>
    <fragment
        android:id="@+id/nav_bars"
        android:name="com.example.diploma_2020.ui.study_bars.StudyBarsFragment"
        android:label="@string/menu_study_bars" >
        <action
            android:id="@+id/action_studyBarsFragment_to_traditionalDetailsFragment"
            app:destination="@id/traditionalDetailsFragment" />
    </fragment>
</navigation>