<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/nav_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            style="@style/MyTextInputLayout"
            android:theme="@style/MyTextInputLayout_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/text_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberOfPeopleField"
            style="@style/MyTextInputLayout"
            android:theme="@style/MyTextInputLayout_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_people"
            android:textColorHint="@color/text_grey"
            app:layout_constraintTop_toBottomOf="@id/nameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberOfPeopleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="@color/text_grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/dateClick"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="@id/dateField"
            app:layout_constraintEnd_toEndOf="@id/dateField"
            app:layout_constraintStart_toStartOf="@id/dateField"
            app:layout_constraintTop_toTopOf="@id/dateField" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateField"
            style="@style/MyTextInputLayout"
            android:theme="@style/MyTextInputLayout_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textColorHint="@color/text_grey"
            app:layout_constraintTop_toBottomOf="@id/numberOfPeopleField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/text_grey" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/reserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>